[package]
authors = ["Andy Goetz <andy@andygoetz.org>", "Nathan Royer <nathan.royer.pro@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "pl011"
version = "1.0.0"
license = "Apache-2.0"
repository = "https://github.com/theseus-os/pl011/"
homepage = "https://github.com/theseus-os/pl011/"
description = "Simple Driver for PL011 UARTs"

[dependencies]
volatile-register = "0.2.0"
log = "0.4.8"
